--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ $(function() {
     // Post the message to the server.
     $.ajax({
       url: "post.json",
-      type: "GET",
+      type: "POST",
       data: {
         title: title,
         body: body
